--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <img alt="AI Brains Logo" class="mr-2" src="assets/img_30x30_034b7050.png"/>
 <h2 class="text-xl font-bold">AI Brains</h2>
 </div>
-<p>© 2023 AI Brains. Keep on promptin'!</p>
+<p>© 2025 AI Brains by Guy Fraser. Keep on promptin'!</p>
 </div>
 </footer>
 <script>
